--- a/src/app/teams/teams.component.html
+++ b/src/app/teams/teams.component.html
@@ -1,7 +1,1 @@
-<div *ngFor="let team of teams">
-    <div class="card">
-      <div class="card-block">
-        <p>{{ team.team.Name }}</p>
-      </div>
-    </div>
-</div>
+<router-outlet></router-outlet>
