--- a/src/app/teams/team-list/team-list.component.html
+++ b/src/app/teams/team-list/team-list.component.html
@@ -1,3 +1,8 @@
+
+<p-dataTable [value]="teams">
+  <p-column field="team.City" header="Team"></p-column>
+</p-dataTable>
+
 <div *ngFor="let team of teams">
     <div class="card">
       <div class="card-block">
