--- a/src/app/teams/team/team.component.html
+++ b/src/app/teams/team/team.component.html
@@ -1,3 +1,11 @@
-<p>
-  team works!
-</p>
+<div *ngFor="let player of players">
+  <div class="card">
+    <div class="card-block">
+      <a [routerLink]="[player.ID]">{{ player.FirstName }} {{ player.LastName }}</a>
+    </div>
+  </div>
+</div>
+
+<p-dataTable [value]="players">
+  <p-column field="LastName" header="Player"></p-column>
+</p-dataTable>
