--- a/src/app/teams/team/team.component.html
+++ b/src/app/teams/team/team.component.html
@@ -1,11 +1,32 @@
-<div *ngFor="let player of players">
+<!-- <div *ngFor="let player of players">
   <div class="card">
     <div class="card-block">
       <a [routerLink]="[player.ID]">{{ player.FirstName }} {{ player.LastName }}</a>
     </div>
   </div>
-</div>
+</div> -->
 
-<p-dataTable [value]="players">
-  <p-column field="LastName" header="Player"></p-column>
-</p-dataTable>
+<div *ngIf="players">
+    <p-dataTable [(value)]="players">
+      <p-column header="Player">
+          <ng-template let-player="rowData" pTemplate="body">
+              {{ player.FirstName }} {{player.LastName}}
+          </ng-template>
+      </p-column>
+      <p-column header="Pts/G">
+        <ng-template let-player="rowData" pTemplate="body">
+            {{ player.PtsPerGame['#text'] }}
+        </ng-template>
+      </p-column>
+      <p-column header="Ast/G">
+        <ng-template let-player="rowData" pTemplate="body">
+            {{ player.AstPerGame['#text'] }}
+        </ng-template>
+      </p-column>
+      <p-column header="Reb/G">
+        <ng-template let-player="rowData" pTemplate="body">
+            {{ player.RebPerGame['#text'] }}
+        </ng-template>
+      </p-column>
+    </p-dataTable>
+</div>
