--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 @import "_variables.scss";
+@import "_datatable.scss";
 @import "_main.scss";
-*{
-    color: $main-blue;
-}
