--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-main-nav></app-main-nav>
-<div class="container main-container" style="text-align:center">
+<div class="container main-container">
   
   <router-outlet></router-outlet>
   
