--- a/src/styles/_datatable.scss
+++ b/src/styles/_datatable.scss
@@ -14,12 +14,12 @@
     tr {
         border-top: 1px solid #C1C3D1;
         border-bottom: 1px solid #C1C3D1;
+        border-collapse: collapse;
         color:#666B85;
         font-size:16px;
         font-weight:normal;
         text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
     }
-
     td {
         background:#FFFFFF;
         padding:20px;
@@ -28,6 +28,10 @@
         font-weight:300;
         font-size:18px;
         text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
-        border-right: 1px solid #C1C3D1;
+        border-style: none !important;
+    }
+
+    tr:hover td{
+        background: #EEEEEE;
     }
 }
