--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import "_fonts.scss";
 @import "_variables.scss";
-@import "_datatable.scss";
 @import "_main.scss";
+@import "_elements.scss";
+@import "_datatable.scss";
+
+
