--- a/src/app/games/game-log/game-log.component.html
+++ b/src/app/games/game-log/game-log.component.html
@@ -5,6 +5,7 @@
     [rows]="10" 
     [paginator]="true"
     expandableRows="true"
+    #dt (onRowClick)="dt.toggleRow($event.data)"
   >
     <p-column header="Date">
       <ng-template let-gamelog="rowData" pTemplate="body">
@@ -26,7 +27,6 @@
         {{ gamelog.stats.Ast['#text'] }}
       </ng-template>
     </p-column>
-    <p-column expander="true" styleClass="col-icon"></p-column>
     <ng-template let-gamelog pTemplate="rowexpansion">
       <div class="ui-grid ui-grid-responsive ui-fluid" style="font-size:16px;padding:20px">
           {{ gamelog.stats.Ast['#text']}}
