--- a/src/app/core/main-nav/main-nav.component.html
+++ b/src/app/core/main-nav/main-nav.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="main-nav" id="main-nav">
+    <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" routerLink="/">Navbar</a>
@@ -20,5 +20,10 @@
         <input class="form-control mr-sm-2" type="text" placeholder="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
-    </div>
+    </div> -->
+    <a href="/" class="active">Home</a>
+    <a class="nav-link" routerLink="/teams">Teams <span class="sr-only">(current)</span></a>
+    <a class="nav-link" routerLink="/players">Players <span class="sr-only">(current)</span></a>
+    <a class="nav-link" routerLink="/games">Games <span class="sr-only">(current)</span></a>
+    <a href="javascript:void(0);" class="icon" onclick="navbarResponse()">&#9776;</a>
 </nav>
