--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,3 +1,8 @@
+*{
+    font-family: $sans-serif;
+    max-width: 100%;
+}
+
 body{
     background: $light-gray;
 }
@@ -7,7 +12,25 @@ body{
     padding-bottom: 2rem;
 }
 
-*{
-    font-family: $sans-serif;
-    max-width: 100%;
+.container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+@media (min-width: 768px) {
+.container {
+    width: 750px;
 }
+}
+@media (min-width: 992px) {
+.container {
+    width: 970px;
+}
+}
+@media (min-width: 1200px) {
+.container {
+    width: 1170px;
+}
+}
+
