--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,7 @@
 @import "_fonts.scss";
 @import "_variables.scss";
 @import "_main.scss";
+@import "_main-nav.scss";
 @import "_elements.scss";
 @import "_datatable.scss";
 
