--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -3,6 +3,10 @@
     max-width: 100%;
 }
 
+a:visited{
+    color: inherit;
+}
+
 body{
     background: $light-gray;
 }
@@ -12,25 +16,9 @@ body{
     padding-bottom: 2rem;
 }
 
-.container {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-  }
-@media (min-width: 768px) {
-.container {
-    width: 750px;
-}
-}
-@media (min-width: 992px) {
-.container {
-    width: 970px;
-}
-}
-@media (min-width: 1200px) {
-.container {
-    width: 1170px;
-}
+.flex-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
 }
 
