--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "_fonts.scss";
 @import "_variables.scss";
+@import "_grid.scss";
 @import "_main.scss";
 @import "_main-nav.scss";
 @import "_elements.scss";
