--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,8 @@
-$main-blue: blue;
+$blue: #1B3769;
+$red: #AD1E3E;
+$green: #00A866;
+
 $light-gray: #FAFAFA;
+$dark-gray: #333;
+
 $sans-serif: 'Roboto', sans-serif;
