--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,25 @@
-$blue: #1B3769;
-$red: #AD1E3E;
-$green: #00A866;
+$light-blue: #CCEDFF;
+$blue: #4DADF7;
+$dark-blue: #228AE6;
+
+$light-green: #BBF3BF;
+$green: #69DB7C;
+$dark-green: #40C057;
+
+$light-red: #FFA8A8;
+$red: #E21E56;
+$dark-red: #A4123E;
+
+$light-yellow: #FFF9DB;
+$yellow: #FCC419;
+$dark-yellow: #CE7C3A;
+
+$light-purple: rgb(203, 164, 248);
+$purple: #3F46AD;
+$dark-purple: rgba(64, 0, 148, 0.842);
 
 $light-gray: #FAFAFA;
-$dark-gray: #333;
+$gray: rgba(241, 243, 245, 0.897);
+$dark-gray: #343A40;
 
 $sans-serif: 'Roboto', sans-serif;
