--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -21,14 +21,50 @@
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
     border-radius: 2px;
     box-sizing: border-box;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    // display: grid;
+    //grid-template-columns: 1fr 1fr;
 
-    .stat-info{
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
+    h3{
+        margin-bottom: .5em;
+    }
+
+    .stat-player-info{
+        box-sizing: border-box;
+        display: block;
+        padding: .5em;
+        width: 50%;
+        float: left;
         text-align: right;
+
+        .stat-player-info__big{
+            font-size: 1.5em;
+            font-weight: 600;
+        }
+
+        span{
+            display: block;
+            padding-top: .25em;
+        }
+    }
+
+    .stat-player-image{
+        display: block;
+        width: 50%;
+        float: left;
+    }
+
+    .stats-season{
+        
+
+
+        .row{
+            padding-top: .25em;
+            padding-bottom: .25em;
+        }
+        .stat__big{
+            font-size: 1.25em;
+            font-weight: 600;
+        }
     }
 
     *{
@@ -40,6 +76,10 @@
         background: $blue;
     }
 
+    &__dark_gray{
+        background: $dark-gray;
+    }
+
     &__green{
         background: $green;
     }
@@ -49,7 +89,7 @@
     }
 
     &__purple{
-        background: #2541B2;
+        background: #485db3;
     }
 
     &__red{
@@ -59,4 +99,33 @@
     &__orange{
         background: #E4572E;
     }
+}
+
+.team-list-card{
+    display: block;
+    float: left;
+    background-color: #fff;
+    border-radius: 4px;
+    box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
+    box-sizing: border-box;
+    padding: 20px 20px 20px 20px;
+
+    transition-property: color,background-color,box-shadow,transform;
+    transition-duration: .15s;
+
+    img{
+        display: block;
+        float: left;
+        width: 50%;
+    }
+
+    .team-list-info{
+        width: 50%;
+        float: left;
+    }
+}
+
+.team-list-card:hover{
+    transform: translateY(-2px);
+    box-shadow: 0 18px 35px rgba(50,50,93,.1), 0 8px 15px rgba(0,0,0,.07);
 }
