--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -37,6 +37,14 @@
     margin-bottom: 1rem;
 }
 
+.card-row-4{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
 // On small devices, each col-md takes up the full width
 .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12{
     grid-column: span 12;
