--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -7,6 +7,11 @@ a:visited{
     color: inherit;
 }
 
+a{
+    color: inherit;
+    text-decoration: none;
+}
+
 body{
     background: $light-gray;
 }
