--- a/src/styles/_datatable.scss
+++ b/src/styles/_datatable.scss
@@ -1,13 +1,15 @@
 .ui-datatable{
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.12), 0 1px 2px 0 rgba(0,0,0,.24);
     th {
-        color:#D5DDE5;;
-        background:#1b1e24;
+        background:#FFFFFF;
         border-bottom:4px solid #9ea7af;
-        border-right: 1px solid #343a45;
-        font-size:23px;
-        font-weight: 100;
-        padding:24px;
-        text-align:left;
+        border: 0 !important;
+        color: rgba(0,0,0,.54);
+        font-size: 14px;
+        font-weight: 500;
+        padding-top: .75em !important;
+        padding-bottom: .75em !important;
+        text-align: left !important;
         text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
         vertical-align:middle;
     }
@@ -16,7 +18,7 @@
         border-bottom: 1px solid #C1C3D1;
         border-collapse: collapse;
         color:#666B85;
-        font-size:16px;
+        font-size: 14px;
         font-weight:normal;
         text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
     }
@@ -26,12 +28,20 @@
         text-align:left;
         vertical-align:middle;
         font-weight:300;
-        font-size:18px;
+        font-size:14px;
         text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
         border-style: none !important;
+        padding-top: .75em !important;
+        padding-bottom: .75em !important;
     }
 
     tr:hover td{
         background: #EEEEEE;
+    }
+
+    .ui-paginator-element.ui-state-active{
+        background: $dark-blue;
+        border-radius: 100%;
+        box-shadow: 0 1px 3px 0 rgba(0,0,0,.12), 0 1px 2px 0 rgba(0,0,0,.24);
     }
 }
