--- a/src/app/players/player/player.component.html
+++ b/src/app/players/player/player.component.html
@@ -2,20 +2,20 @@
 
   <div class="card-row-3">
 
-    <div class="stat-card stat-card__blue">
+    <div class="card card__blue">
       <h1>{{ player.FirstName }} {{ player.LastName }}</h1><br>
       <img class="stat-player-image" src="{{ player.officialImageSrc }}">
       <div class="stat-player-info">
-          <span class="stat-player-info__big">#{{ player.JerseyNumber}} | {{ player.Position }}</span>
+          <span class="stat-player-info__big">#{{ player?.JerseyNumber}} | {{ player.Position }}</span>
           <span>{{ player.Age }} years old</span>
           <span>{{ player.Height}} | {{ player.Weight}} lbs</span>
       </div>
       
     </div>
 
-    <div class="stat-card stat-card__dark_gray">
+    <div class="card card__dark_gray">
       <h3>Season Stats</h3>
-      <div class="stats-season">
+      <div class="stats-season" *ngIf="statsLoaded">
         <div class="row">
           <div class="col-md-4 stat__big">
               {{ player.PtsPerGame['#text'] }} PPG
@@ -61,9 +61,10 @@
       </div>
     </div>
 
-    <div class="stat-card stat-card__purple">
+    <div class="card card__purple">
         <h3>Past Month</h3>
-        <div *ngIf="gameLogs" class="stats-season">
+        <mat-spinner *ngIf="!monthStatsLoaded"></mat-spinner>
+        <div class="stats-season" *ngIf="monthStatsLoaded">
             <div class="row">
                 <div class="col-md-4 stat__big">
                     {{ monthAverages['Pts'].average }} PPG
@@ -116,3 +117,13 @@
 <div *ngIf="player.ID">
     <app-game-log  [(player)]="player.ID"></app-game-log>
 </div>
+
+<div class="card-row-2">
+    <div class="card">
+        <mat-spinner></mat-spinner>
+    </div>
+    <div class="card">
+        <mat-spinner></mat-spinner>
+    </div>
+</div>
+
