--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -13,8 +13,9 @@
     }
 }
 
-.stat-card{
+.card{
     width: 100%;
+    background: white;
     border-radius: 1em;
     color: white;
     padding: 10px 15px 15px;
