--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -29,6 +29,14 @@
     margin-bottom: 1rem;
 }
 
+.card-row-2{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
 .card-row-3{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
