--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,10 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "_fonts.scss";
 @import "_variables.scss";
+@import "_material-edits.scss";
 @import "_grid.scss";
 @import "_main.scss";
 @import "_main-nav.scss";
 @import "_elements.scss";
 @import "_datatable.scss";
+
 
 
