--- a/src/app/teams/team/team.component.html
+++ b/src/app/teams/team/team.component.html
@@ -1,3 +1,12 @@
+<div *ngIf="team">
+  <div class="card-row-2">
+    <div class="card">
+        <h1>{{ team.City }} {{ team.Name }}</h1>
+        <img src="assets/imgs/{{team.Abbreviation}}.png">
+    </div>
+  </div>
+</div>
+
 <div *ngIf="players">
     <p-dataTable 
         [(value)]="players"
@@ -21,6 +30,16 @@
       <p-column header="Reb/G" sortable="custom" (sortFunction)="sortPlayers(players, 'RebPerGame')">
         <ng-template let-player="rowData" pTemplate="body">
             {{ player.RebPerGame['#text'] }}
+        </ng-template>
+      </p-column>
+      <p-column header="Stl/G" sortable="custom" (sortFunction)="sortPlayers(players, 'StlPerGame')">
+        <ng-template let-player="rowData" pTemplate="body">
+            {{ player.StlPerGame['#text'] }}
+        </ng-template>
+      </p-column>
+      <p-column header="Blk/G" sortable="custom" (sortFunction)="sortPlayers(players, 'BlkPerGame')">
+        <ng-template let-player="rowData" pTemplate="body">
+            {{ player.BlkPerGame['#text'] }}
         </ng-template>
       </p-column>
     </p-dataTable>
