--- a/src/styles/_datatable.scss
+++ b/src/styles/_datatable.scss
@@ -1,10 +1,10 @@
 .ui-datatable{
     box-shadow: 0 5px 5px -3px rgba(0,0,0,.2), 0 8px 10px 1px rgba(0,0,0,.14), 0 3px 14px 2px rgba(0,0,0,.12);
     th {
-        background:#FFFFFF;
+        background: $dark-gray;
         border-bottom:4px solid #9ea7af;
         border: 0 !important;
-        color: rgba(0,0,0,.54);
+        color: white;
         font-size: 14px;
         font-weight: 500;
         padding-top: .75em !important;
@@ -41,6 +41,7 @@
 
     .ui-paginator-element.ui-state-active{
         background: $dark-blue;
+        color: white;
         border-radius: 100%;
         box-shadow: 0 1px 3px 0 rgba(0,0,0,.12), 0 1px 2px 0 rgba(0,0,0,.24);
     }
