--- a/src/app/teams/team/team.component.html
+++ b/src/app/teams/team/team.component.html
@@ -1,9 +1,112 @@
 <div *ngIf="team">
-  <div class="card-row-2">
-    <div class="card">
-        <h1>{{ team.City }} {{ team.Name }}</h1>
-        <img src="assets/imgs/{{team.Abbreviation}}.png">
+  <div class="card-row-3">
+
+    <div class="card card__white">
+      <h1>{{ team.City }} {{ team.Name }}</h1><br>
+      <img class="stat-team-image" src="assets/imgs/{{team.Abbreviation}}.png">
+      <div class="stat-team-info">
+          <span class="stat-team-info__big">{{ team.Wins['#text'] }}W - {{ team.Losses['#text'] }}L</span>
+      </div>
+      
     </div>
+
+    <div class="card card__dark_gray">
+      <h3>Season Stats</h3>
+      <div class="stats-season">
+        <div class="row">
+          <div class="col-md-4 stat__big">
+              {{ team.PtsPerGame['#text'] }} PPG
+          </div>
+          <div class="col-md-4 stat__big">
+              {{ team.RebPerGame['#text'] }} RPG
+          </div>
+          <div class="col-md-4 stat__big">
+              {{ team.AstPerGame['#text'] }} APG
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-4">
+              {{ team.StlPerGame['#text'] }} SPG
+          </div>
+          <div class="col-md-4">
+              {{ team.BlkPerGame['#text'] }} BPG
+          </div>
+          <div class="col-md-4">
+              {{ team.TovPerGame['#text'] }} TOPG
+          </div>
+        </div>
+
+        <br>
+        <hr>
+        <br>
+
+        <div class="row">
+            <div class="col-md-4 stat__big">
+                {{ team.FgPct['#text'] }} FG%<br>
+                <span class="stat-card-shooting">{{ team.FgMadePerGame['#text'] }}-{{ team.FgAttPerGame['#text'] }}</span>
+            </div>
+            <div class="col-md-4 stat__big">
+                {{ team.Fg3PtPct['#text'] }} 3P%<br>
+                <span class="stat-card-shooting">{{ team.Fg3PtMadePerGame['#text'] }}-{{ team.Fg3PtAttPerGame['#text'] }}</span>
+            </div>
+            <div class="col-md-4 stat__big">
+                {{ team.FtPct['#text'] }} FT%<br>
+                <span class="stat-card-shooting">{{ team.FtMadePerGame['#text'] }}-{{ team.FtAttPerGame['#text'] }}</span>
+            </div>
+          </div>
+      </div>
+    </div>
+
+    <div class="card card__purple">
+        <h3>Past Month</h3>
+        <mat-spinner *ngIf="!monthStatsLoaded"></mat-spinner>
+        <div class="stats-season" *ngIf="monthStatsLoaded">
+            <div class="row">
+                <div class="col-md-4 stat__big">
+                    {{ monthAverages['Pts'].average }} PPG
+                </div>
+                <div class="col-md-4 stat__big">
+                    {{ monthAverages['Reb'].average }} RPG
+                </div>
+                <div class="col-md-4 stat__big">
+                    {{ monthAverages['Ast'].average }} APG
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4">
+                    {{ monthAverages['Stl'].average}} SPG
+                </div>
+                <div class="col-md-4">
+                    {{ monthAverages['Blk'].average }} BPB
+                </div>
+                <div class="col-md-4">
+                    {{ monthAverages['Tov'].average }} TOPG
+                </div>
+            </div>
+
+            <br>
+            <hr>
+            <br>
+
+            <div class="row">
+                <div class="col-md-4 stat__big">
+                    {{  monthAverages['FgPct'].total }} FG%<br>
+                    <span class="stat-card-shooting">{{ monthAverages['FgMade'].average }}-{{ monthAverages['FgAtt'].average }}</span>
+                </div>
+                <div class="col-md-4 stat__big">
+                    {{  monthAverages['Fg3PtPct'].total }} 3P%<br>
+                    <span class="stat-card-shooting">{{ monthAverages['Fg3PtMade'].average }}-{{ monthAverages['Fg3PtAtt'].average }}</span>
+                </div>
+                <div class="col-md-4 stat__big">
+                    {{ monthAverages['FtPct'].total }} FT%<br>
+                    <span class="stat-card-shooting">{{ monthAverages['FtMade'].average }}-{{ monthAverages['FtAtt'].average }}</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
   </div>
 </div>
 
