--- a/src/app/teams/team/team.component.css
+++ b/src/app/teams/team/team.component.css
@@ -1,3 +1,23 @@
 h1 {
     font-size: 1.5em;
 }
+
+.green-text{
+    color: green;
+}
+
+.red-text{
+    color: red;
+}
+
+.vs-image{
+    display: block;
+    float: right;
+    width: 25%;
+}
+
+.vs-info{
+    clear: both;
+    float: right;
+    width: 70%;
+}
