--- a/src/styles/_datatable.scss
+++ b/src/styles/_datatable.scss
@@ -1,5 +1,8 @@
 .ui-datatable{
     box-shadow: 0 5px 5px -3px rgba(0,0,0,.2), 0 8px 10px 1px rgba(0,0,0,.14), 0 3px 14px 2px rgba(0,0,0,.12);
+    .bold-column{
+        font-weight: bold;
+    }
     th {
         background: $dark-gray;
         border-bottom:4px solid #9ea7af;
