Routing to Compare

--- a/src/app/core/main-nav/main-nav.component.html
+++ b/src/app/core/main-nav/main-nav.component.html
@@ -25,5 +25,6 @@
     <a class="nav-link" routerLink="/teams">Teams <span class="sr-only">(current)</span></a>
     <a class="nav-link" routerLink="/players">Players <span class="sr-only">(current)</span></a>
     <a class="nav-link" routerLink="/games">Games <span class="sr-only">(current)</span></a>
+    <a class="nav-link" routerLink="/compare">Compare <span class="sr-only">(current)</span></a>
     <a href="javascript:void(0);" class="icon" onclick="navbarResponse()">&#9776;</a>
 </nav>
