Player comparison area

--- a/src/app/compare/compare.component.html
+++ b/src/app/compare/compare.component.html
@@ -10,3 +10,7 @@
         </div>
     </div>
 </div>
+
+<div *ngIf="playerOne && playerTwo">
+    <app-player-compare [playerOneSelected]="playerOne" [playerTwoSelected]="playerTwo"></app-player-compare>
+</div>
